added hidden netlify form

--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,13 @@
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
+  <form name="contact" data-netlify="true" hidden>
+    <input type="hidden" name="form-name" value="contact" />
+    <input type="text" name="name" />
+    <input type="email" name="email" />
+    <textarea name="message"></textarea>
+    <button type="submit">Send</button>
+  </form>
   <div id="root"></div>
   <!--
       This HTML file is a template.
